# has-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RELEASE-v5-pi-proof-stub.md  RELEASE-v5.md  SECURITY.md  THIRD_PARTY_NOTICES.md  hooks-research.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  setup.sh  skill-chapter-intros.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.githooks/: pre-commit  pre-push
agent-booster-pack/: README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
agent-booster-pack-contract-first/: README.md  package.json  pnpm-lock.yaml
agent-booster-pack-proof/: .gitignore  README.md  package.json  vitest.config.ts
agent-booster-pack-skills/: README.md  package.json
agent-booster-pack-specify/: README.md  package.json
agent-booster-pack-technical-design/: README.md  package.json
agent-booster-pack-whiteboard/: README.md  package.json
agents/: AGENTS.md
consult/: README.md  THIRD_PARTY_NOTICES.md  package.json
eval/: README.md  eval.config.ts  eval.ts  framework.ts  package-lock.json  package.json  tsconfig.json  types.ts
pi/: README.md  package.json
plugin/: hooks.json  plugin.json
scripts/: generate-plugin-symlinks.mjs  generate-plugin-symlinks.sh  generate_plugin_symlinks.py  pi-install-local.sh  pre-commit-acceptance.mjs  pre-push-acceptance.mjs  pre_commit_acceptance.py  publish-pi-packages.sh  release.sh  sync_agents_md.py  update-installed-plugins.sh  validate-markdown-links.mjs  validate-skill-anatomy.mjs  (+2 more)
(+632 files in other folders)
